--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
+    <link href="./assets/css/paper-dashboard.css" rel="stylesheet" />
     <link href="./assets/css/demo.css" rel="stylesheet" />
 
 
@@ -25,7 +26,7 @@
     <link href="./assets/css/themify-icons.css" rel="stylesheet">
 </head>
 
-<body class="perfect-scrollbar-off">
+<body class="perfect-scrollbar-off boxed">
     <app-root>
         <div class="loader-container">
             <div class="loader"></div>
